--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL92Dialec
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
+spring.mvc.view.prefix=/templates/
+spring.mvc.view.suffix=.html
 
 
