--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,16 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/test
-spring.datasource.username=postgres
-spring.datasource.password=admin
-
+spring.datasource.url=jdbc:mysql://aagfsnynueiblr.ctvv3fcco5nn.us-east-1.rds.amazonaws.com:3306/ebdb
+spring.datasource.username=root
+spring.datasource.password=1995dima
+server.port=5000
 # Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL92Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=update
 spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.html
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true 
 
 
